# Clinical-Data-Foundation

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  check_services_status.py  docker-compose.observability.yaml  docker-compose.stack.yaml  docker-compose.yaml  mypy.ini  pyproject.toml  requirements.txt
connectors/minio/: create_buckets.py
dags/: healthcare_pipeline.py  ingestion_dag.py  modeling_dag.py  silver_dag.py
logs/: logger.py
monitoring/: events.py  exceptions.py  metrics.py  reporter.py
observability/logs/: logger.py
observability/monitoring/: events.py  exceptions.py  metrics.py  reporter.py
orchestration/pipeline/: run_ingestion.py  run_modeling.py  run_silver.py  run_warehouse.py
pipeline/: run_ingestion.py  run_modeling.py  run_silver.py
src/ingestion/: local_to_minio.py  metadata.py
src/ingestion/connectors/minio/: create_buckets.py
src/ingestion/connectors/postgres/: init_postgres.py  list_bronze_tables.py  postgres.py
src/ingestion/metadata/: metadata.py
src/ingestion/schemas/: local_to_minio.py  minio_to_postgres.py
src/lake/silver/: validate.py
src/modeling/entities/: encounter.py  observation.py  patients.py
src/modeling/relationship/: encounter_observations.py  patient_encounters.py
src/modeling/temporal/: scd.py  validity.py  versioning.py
src/orchestration/: run_ingestion.py
src/orchestration/pipeline/: run_ingestion.py  run_silver.py
src/pipelines/: run_silver.py
src/processing/silver/: clean.py
src/quality/: checkpoints.py  context.py  exception.py  validators.py
src/storage/: base_writer.py  lake_writer.py  modeling_writer.py  modes.py  silver_writer.py  warehouse_writer.py  writer_factory.py
src/transformations/engine/: polars_engine.py
src/transformations/silver/: enrich_struct.py  normalize.py
src/utils/: config.py
tests/: test_run_ingestion.py  test_run_modeling.py  test_run_silver.py
