[tool.poetry]
name = "Clinical Data Foundation"
version = "0.1.0"
description = "A production-oriented healthcare data platform designed for clinical analytics, data science, and machine learning. The project emphasizes data quality, observability, and domain-driven modeling for medical use cases."
authors = ["Abdias Arsène <abdiasarsene@email.com>"]
readme = "README.md"
packages = [{ include = "DE_Clinical_Project" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2"
starlette = "^0.37"
pydantic = "^2.7"
prometheus-client = "^0.20"
prometheus-fastapi-instrumentator = "^6.0"
python-dotenv = "^1.0"
pydantic-settings = "^2.12"
python-json-logger = "^2.0.7"
s3fs = "2024.6.1"
opentelemetry-api = "1.39.1"
opentelemetry-sdk = "1.39.1"
minio = "7.2.9"
requests = "2.32.3"
opentelemetry-exporter-otlp = "1.39.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pre-commit = "^3.5"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"