[tool.poetry]
name = "clinical-data-foundation"
version = "0.1.0"
description = "Production-oriented healthcare data platform for clinical analytics, data science, and ML with strong data quality and observability."
authors = ["Abdias Arsène <abdiasarsene@email.com>"]
readme = "README.md"

packages = [
    { include = "pipeline" },
    { include = "src" },
    { include = "observability" }
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2"
starlette = "^0.37"
pydantic = "^2.7"
prometheus-client = "^0.20"
prometheus-fastapi-instrumentator = "^6.0"
python-dotenv = "^1.0"
pydantic-settings = "^2.12"
python-json-logger = "^2.0.7"
s3fs = "2024.6.1"
opentelemetry-api = "1.39.1"
opentelemetry-sdk = "1.39.1"
opentelemetry-exporter-otlp = "1.39.1"
minio = "7.2.9"
requests = "2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pre-commit = "^3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"